# kiaomni

./: .gitignore  CHANGELOG.md  GROUND_TRUTH.md  KiaOmni_Paper.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-05-21-kiaomni-reports-publication-design.md
examples/: 01_quickstart_gpt2.py  02_custom_policy.py  03_quickstart_tinyllama.py
experiments/: 033_full_comparison.py  034_mistral_benchmark.py  035_niah_heatmap.py  035_passkey_retrieval.py  035_ppl_wikitext2.py  037_falcon3_benchmark.py  038_biomistral_benchmark.py  039_swap_experiment.py  040_amber_benchmark.py  README.md  llm_judge.py
kiaomni/: __init__.py  monkey_patch.py  policies.py  utils.py
kiaomni/adapters/: __init__.py  cache.py  probe.py  saliency.py
paper/: .gitignore  Makefile  PANDOC_AUDIT.md  build.sh  template.tex
reports/: README.md  dreamy-drifting-wombat.md  now-i-need-to-functional-garden.md  sleepy-splashing-kite.md
reports/ablations/signal-swap/: README.md  provenance.json
reports/benchmarks/niah-heatmap/: README.md  (+1 more)
reports/cross-model/: README.md  amber-7b.md  biomistral-7b.md  falcon3-7b.md  provenance.json
reports/full-comparison/: README.md  _build.py  provenance.json
reports/llm-judge/: README.md  provenance.json
reports/mistral-7b/: README.md  provenance.json
reports/qwen2.5-7b/: README.md  generate_plots.py  generate_reports.py  provenance.json
scripts/: validate_parity.py
tests/: test_gpt2_smoke.py  test_policies.py  test_probe_mocked.py  test_remove_regression.py  test_saliency_strategy.py  test_utils.py
(+22 files in other folders)
